Thu Jul  7 06:56:15 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c (FIBER_STACK_FLAGS): workaround fix for r32420 on FreeBSD.

Thu Jul  7 06:46:12 2011  Eric Hodel  <drbrain@segment7.net>

	* benchmark/driver.rb:  Add difference column to report that averages
	  across all runs of a benchmark.  [Ruby 1.9 - Feature #4982]

Thu Jul  7 06:19:38 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Reduce requires to improve `make benchmark`.
	  [#4962]
	* lib/rubygems/specification.rb:  Delay initialization of rubygems
	  until require is called.

Thu Jul  7 04:31:26 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (arg): rescue_mod is in inverse order from other
	  modifiers.  patched by michael.j.edgar AT dartmouth.edu at
	  [ruby-core:36248].  fixed #4716.

Thu Jul  7 00:40:16 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (kill): check that the process exited or not before
	  terminating it. [Bug #4943]

Wed Jul  6 23:13:19 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (opt_call_args): allow trailing comma after assoc
	  argument e.g. 'foo(bar:1,)'.  fixed #3456

Wed Jul  6 22:11:12 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/cgi/test_cgi_header.rb(test_cgi_header_nph): Validate date in
	  "Date:" header

Wed Jul  6 21:29:33 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (fiber_machine_stack_alloc): cleanup pointer arithmetic.
	  "size/sizeof(VALUE)" is ugly and easy confusing.
	* cont.c (fiber_initialize_machine_stack_context): ditto.

Wed Jul  6 21:24:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* cont.c (fiber_machine_stack_alloc): fix mprotect misuse. A stack
	  guard page should have PROT_NONE.
	* cont.c (fiber_initialize_machine_stack_context):
	  th->machine_stack_maxsize shouldn't be included guard pages size.
	  [Bug #4983][ruby-dev:44043]

Wed Jul  6 21:23:38 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
